# ModersSite

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt  salaries.db-shm  salaries.db-wal
Scripts/: activate  activate.bat  activate.fish  activate.nu
app/: auth.py  config.py  db.py  main.py  requirements.txt
app/api/endpoints/: __init__.py  auth.py  projects.py  staff.py  table.py
app/core/: config.py  exceptions.py  security.py
app/database/: base.py  create_tables.py  crud.py  models.py  salary_db.py  schemas.py
app/services/: auth_service.py  metalabs.py  staff_service.py  telegram.py
app/static/css/: moderators.css  profile.css  projects.css  salary.css  server.css  staff.css  style.css  table.css
app/static/js/: main.js  profile.js  projects.js  salary.js  server.js  staff.js  table.js
app/templates/: index.html  project_details.html  projects.html  server_details.html  server_selection.html  staff.html  table_page.html
app/templates/partials/: activity.html  moderators.html  online_check.html  profile.html  salary.html  sidebar.html  table.html
migrations/: env.py
migrations/versions/: cac2b76a4eaf_create_salaries_table.py
