[tool.poetry]
name = "moderssite"
version = "0.1.0"
description = "Site for moderators management"
authors = ["Nikita Orlovsky <orlovski15555@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
alembic = {extras = ["tz"], version = "^1.16.5"}
aiohttp = "^3.12.15"
bcrypt = "^5.0.0"
jinja2 = "^3.1.6"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.43"
itsdangerous = "^2.2.0"
passlib = "^1.7.4"
argon2-cffi = "^25.1.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"